--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -1,4 +1,4 @@
-<table class=sysSigsTable" cellpadding="10">
+<table class=sysSigsTable">
     <tr>
     <th>Actions</th>
     <th>Upd.</th>
@@ -32,7 +32,7 @@
             <td>
             {% if sig.sigtype.escalatable and sig.system.sysclass > 4 and sig.system.sysclass < 7 %}
                 {% if sig.lastescalated < escalationThreshold or not sig.lastescalated %}
-                    {% if sig.downtimes = 2 %}
+                    {% if sig.downtimes > 2 %}
                     <i class="icon-fire" onlick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Site will despawn at DT."></i>
                     {% else %}
                     <i class="icon-fullscreen" onclick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Clear escalation only."></i>
