--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -26,7 +26,7 @@
             <a class="btn" onclick="SetInterest({{mapsys.pk}});" >Set Interest</a>
 
             {% endif %}
-        <a class="btn" onclick="MarkScanned({{mapsys.pk}}, false);">Mark Scanned</a>
+            <a class="btn" onclick="MarkScanned({{mapsys.pk}}, false, {{mapsys.system.pk}});">Mark Scanned</a>
         <div class="btn-group dropdown">
             <a class="btn dropdown-toggle" data-toggle="dropdown">
                 Delete
