Add autocomplete for site types to sig info field.

--- a/evewspace/Map/templates/add_sig_form.html
+++ b/evewspace/Map/templates/add_sig_form.html
@@ -14,6 +14,10 @@
                     e.preventDefault();
                     AddSignature({{system.pk}});
                     return false;
+                    });
+        $("#id_info").autocomplete({
+                source: "/search/site/",
+                minLength: 2
                 });
     </script>
 </div>
