Add core model to hold settings.
Restrict site name autocomplete to w-space systems.
Temporarily removed edit_pos permission checks.

--- a/evewspace/Map/templates/add_sig_form.html
+++ b/evewspace/Map/templates/add_sig_form.html
@@ -15,9 +15,11 @@
                     AddSignature({{system.pk}});
                     return false;
                     });
+        {% if system.system.sysclass < 7 %}
         $("#id_info").autocomplete({
                 source: "/search/site/",
                 minLength: 2
                 });
+        {% endif %}
     </script>
 </div>
