--- a/evewspace/Map/templates/map_nav.html
+++ b/evewspace/Map/templates/map_nav.html
@@ -1,7 +1,8 @@
 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Map</a><ul class="dropdown-menu">
 		{% load mapnav %}
         {% mapnavlist user %}
+        {% if perms.Map.add_map %}
         <li class="divider"></li>
         <li><a href="{% url Map.views.create_map %}">Add Map</a></li>
-        <li><a href="{% url Map.views.map_config %}">Configure Maps</a></li>
+        {% endif %}
 	</ul></li>
