Change rats cleared and site escalated to toggles.

--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -26,19 +26,19 @@
             {% if sig.sigtype.sleeprsite and not sig.ratscleared %}
             <i class="icon-warning-sign" onclick="MarkCleared({{sig.pk}}, {{system.pk}});" title="NPCs not cleared!"></i> 
             {% elif sig.sigtype.sleeprsite %}
-                <i class="icon-screenshot" title="NPCs cleared at {{sig.ratscleared|date:'Y-m-d H:i'}}"></i> 
+            <i class="icon-screenshot" onclick="MarkCleared({{sig.pk}}, {{system.pk}});" title="NPCs cleared at {{sig.ratscleared|date:'Y-m-d H:i'}}"></i> 
                 {% endif %}
             </td>
             <td>
             {% if sig.sigtype.escalatable and sig.system.sysclass > 4 and sig.system.sysclass < 7 %}
-                {% if sig.lastescalated < escalationThreshold or not sig.lastescalated %}
+                {% if not sig.lastescalated %}
                     {% if sig.downtimes > 2 %}
                     <i class="icon-fire" onlick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Site will despawn at DT."></i>
                     {% else %}
                     <i class="icon-fullscreen" onclick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Clear escalation only."></i>
                     {% endif %}        
                 {% else %}    
-                    <i class="icon-ok" title="Site escalated today."></i>
+                <i class="icon-ok" onclick="MarkEscalated({{sig.pk}}, {{system.pk}});" title="Site escalated today."></i>
                 {% endif %}    
                 {% endif %}
             </td>
