Add bulk signature function.
Fix possible infinite LoadSignatures timer.

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -83,7 +83,7 @@
        <div id=systemSigsWell class="systemSigsWell well well-small">
             <h5>Signatures ({{system.signatures.count}} Total)</h5>
             <div id="sigAddPanel" class"sigAddPanel">
-                <h6>Add Signature</h6>
+                <h6>Add Signature <i class="icon-download" onclick="GetBulkImport({{mapsys.pk}});"></i></h6>
                 <div id="sys{{mapsys.pk}}SigAddForm">
                 </div>
             </div>
