Limit friendly name to 8 characters.

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <input type="hidden" class="sysAddInput" name="topMsID" value="{{topMs.pk}}">
     System: &nbsp <input type="text" class="sysAddInput" name="bottomSystem" id="sysNameBox" /> <br />
-        Friendly Name: &nbsp
+        Friendly Name (Max 8 Char.): &nbsp
         <input type="text" class="sysAddInput" name="friendlyName" value=""> <br />
 
         <h5>Wormhole Status:</h5>
