--- a/evewspace/Map/templates/igb_system_add_dialog.html
+++ b/evewspace/Map/templates/igb_system_add_dialog.html
@@ -3,7 +3,7 @@
         {% csrf_token %}
         <input type="hidden" class="sysAddInput" name="topMsID" value="{{oldsystem.pk}}">
         <input type="hidden" class="sysAddInput" name="bottomSystem" value="{{newsystem}}">
-        <h4>Friendly Name:</h4>
+        <h4>Friendly Name: Max 8 Char.</h4>
         <input type="text" class="sysAddInput" name="friendlyName" value=""> <br />
 
         <h4>Wormhole Status:</h4>
