--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}bootstrap/js/bootstrap.js"> </script>
+        <script type="text/javascript" src="{{STATIC_URL}}js/base.js"></script>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/vader/vader.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.css" />
