--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -1,6 +1,10 @@
 <li id="pos{{pos.pk}}" class="posListItem">
+{% if perms.POS.change_pos %}
 <i class="icon-pencil" onclick="GetEditPOSDialog({{pos.pk}}, {{system.pk}});" title="Edit POS"></i>
+{% endif %}
+{% if perms.POS.delete_pos %}
 <i class="icon-ban-circle" onclick="DeletePOS({{pos.pk}}, {{system.pk}});" title="Delete POS"></i>
+{% endif %}
 
 <div class="poslist_header" data-toggle="collapse" data-target="#pos{{pos.pk}}Details" style="position:relative">
         <img height="48" width="48" src="http://image.eveonline.com/Render/{{pos.towertype.pk}}_128.png"></img>
