--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -30,7 +30,7 @@
         <input type="radio" class="sysAddInput" name="bottomBubbled" value="0" checked="checked">No 
         <input type="radio" class="sysAddInput" name="bottomBubbled" value="1">Yes
         <br /><br />
-        <input id="sysAddSubmit" class="sysAddInput" type="submit" value="Add System">
+        <input id="sysAddSubmit" class="sysAddInput btn btn-primary" type="submit" value="Add System">
     </form>
         <script type="text/javascript">
             $('#sysNameBox').autocomplete({
