--- a/evewspace/Map/templates/bulk_sig_form.html
+++ b/evewspace/Map/templates/bulk_sig_form.html
@@ -5,7 +5,7 @@
         </p>
         <textarea name="paste" id="pasteField" rows=8></textarea><br />
         <br />
-        <input type="submit" value="Import Sigs">
+        <input class="btn btn-primary" type="submit" value="Import Sigs">
     </form>
     <script type="text/javascript">
         $('#bulkSigForm').submit(function(e){
