--- a/evewspace/Map/templates/edit_sig_form.html
+++ b/evewspace/Map/templates/edit_sig_form.html
@@ -7,7 +7,7 @@
             {% endif %}
             {{field.label_tag}} {{field}} &nbsp
         {% endfor %}
-        <input type="submit" value="Save Sig" />
+        <input class="btn btn-primary" type="submit" value="Save Sig" />
     </form>
     <script type="text/javascript">
         $("#sigEditForm").submit(function(e){
