--- a/evewspace/Map/templates/edit_system.html
+++ b/evewspace/Map/templates/edit_system.html
@@ -8,7 +8,7 @@
         <h4>Occupied: </h4>
         <textarea name="occupied" id="occupiedField" rows=8 cols=50 >{{occupied}}</textarea><br />
         <br />
-        <input type="submit" value="Save Info">
+        <input class="btn btn-primary" type="submit" value="Save Info">
     </form>
     <script type="text/javascript">
         $('#editSystemForm').submit(function(e){
