--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -21,7 +21,7 @@
         <br />Fitting: <br />
         <textarea cols=40 rows=10 name="fitting"></textarea><br />
         Parse as D-Scan Paste: <input type="checkbox" name="dscan" value="1"> <br />
-        <input type="submit" value="Add POS">
+        <input class="btn btn-primary" type="submit" value="Add POS">
     </form>
     <script type="text/javascript">
     function Test(rad){
