--- a/evewspace/POS/templates/edit_pos.html
+++ b/evewspace/POS/templates/edit_pos.html
@@ -22,7 +22,7 @@
         Fitting: <br />
         <textarea  rows="10" name="fitting">{{fitting}}</textarea><br />
         Parse as D-Scan Paste: <input type="checkbox" name="dscan" value="1"> <br />
-        <input type="submit" value="Save POS">
+        <input class="btn btn-primary" type="submit" value="Save POS">
     </form>
     <script type="text/javascript">
     function Test(rad){
