--- a/evewspace/account/static/css/login.css
+++ b/evewspace/account/static/css/login.css
@@ -42,7 +42,8 @@
     max-width: 300px;
     border: thin solid #CDCDCD;
     padding: 20px 20px 20px 20px;
-    text-align: left;
+    text-align: center;
+    list-style-type: none;
 }
 .registerBox li
 {
