--- a/evewspace/Map/templates/edit_wormhole.html
+++ b/evewspace/Map/templates/edit_wormhole.html
@@ -26,7 +26,7 @@
          <input type="radio" class="editWormholeInput" name="bottomBubbled" value="1" {% if wormhole.bottom_bubbled %} checked="checked" {% endif %}> Yes
         <br />
         <br />
-        <input type="submit" value="Save Wormhole">       
+        <input class="btn btn-primary" type="submit" value="Save Wormhole">       
     </form>
     <script type="text/javascript">
         $('#topType').autocomplete({
