--- a/evewspace/Map/templates/new_map.html
+++ b/evewspace/Map/templates/new_map.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form action="{% url Map.views.create_map %}" method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Submit" />
+    <input class="btn btn-primary" type="submit" value="Submit" />
 </form>
 {% endblock %}
 
