Correct z-index on Map system menu.
Tickets: #107 fixed #105 fixed

--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -1,4 +1,4 @@
-<div id="sysMenu">
+<div id="sysMenu" class="sysMenuDiv">
 <div class="btn-group btn-group-vertical">
     <a class="btn" onclick="DisplaySystemDetails({{mapsys.pk}}, {{mapsys.system.pk}});" href="#sysInfo">Details </a>
     {% if not is_igb %}
