DND: Refactor JS Timers. Refactor Map views.
Diasble signature info box autocomplete.

--- a/evewspace/Map/templates/add_sig_form.html
+++ b/evewspace/Map/templates/add_sig_form.html
@@ -16,10 +16,10 @@
                     return false;
                     });
         {% if system.system.sysclass < 7 %}
-        $("#id_info").autocomplete({
-                source: "/search/site/",
-                minLength: 2
-                });
+        //$("#id_info").autocomplete({
+        //        source: "/search/site/",
+        //        minLength: 2
+        //        });
         {% endif %}
     </script>
 </div>
