--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -15,6 +15,7 @@
 </h4>
 </div>
     <div class="mapSysInfo">
+        <button class="btn"onclick="DisplaySystemDetails({{mapsys.pk}}, {{mapsys.system.pk}});"> Crash Me </button>
         <h5 class="friendlyName"> Friendly Name: <small>{{mapsys.friendlyname}}</small> </h5> 
     </div>
     <div class="sysClassSpan row">
