Refactor map update loop.
Ensure that IGB trust is only requested if we're in the IGB and not trusted already.

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -11,6 +11,8 @@
 <div id="mapDiv" class="mapDiv">
 
 </div>
+<div id="logDiv" class="logDiv">
+</div>
 {% endblock %}
 {% block content %}
 <div id="sysInfoDiv" class="sysInfoDiv">
