--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -10,9 +10,11 @@
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/vader/vader.css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/base.css" />
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}bootstrap/css/bootstrap.css" />
+        {% if is_igb and not is_igb_trusted %}
         <script type="text/javascript">
             CCPEVE.requestTrust('{{SITE_URL}}');
         </script>
+        {% endif %}
 		{% block scripts %}{%endblock%}
 		{% block head %}{%endblock%}
 	</head>
