--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -11,6 +11,17 @@
 <div id="mapDiv" class="mapDiv">
 
 </div>
+<div id="legendDiv">
+    <p class="text-info">
+        <em>Legend:</em> &nbsp
+        <img src='{{STATIC_URL}}images/pvp.png' height='32' width='32'></img> : PVP Activity 
+        <img src='{{STATIC_URL}}images/carebears.png' height='32' width='32'></img> : NPC Kills
+        <img src='{{STATIC_URL}}images/mylocation.png' height='32' width='32'></img> : You are here!
+        {% if perms.SiteTracker.can_sitetracker %}
+        <img src='{{STATIC_URL}}images/farm.png' height='32' width='32'></img> : SiteTracker Up!
+        {% endif %}
+    </p>
+</div>
 <div id="logDiv" class="logDiv">
 </div>
 {% endblock %}
