Prevent bluk sig importer from adding a sig where the ID is already used.
fixes #120

--- a/evewspace/Map/templates/bulk_sig_form.html
+++ b/evewspace/Map/templates/bulk_sig_form.html
@@ -1,7 +1,8 @@
 <div id="bulkSigDialog" title="Signature Import: {{mapsys.system.name}}">
     <form id="bulkSigForm" class="bulkSigForm" method="port" action="system/{{mapsys.pk}}/signatures/bulkadd/">
         <p class="text-info">
-        To use this feature, copy your in-game signature list and paste it here. Signature ID must be the first column in your signature list for this to work.
+        To use this feature, copy your in-game signature list and paste it here. Signature ID must be the first column in your signature list for this to work.<br /><br />
+        Signatures already on the map will not be added again!
         </p>
         <textarea name="paste" id="pasteField" rows=8></textarea><br />
         <br />
