Add visited and info update timers to systems.

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -58,9 +58,15 @@
     </span> &nbsp 
     <i id="markScanned" onclick="MarkScanned({{mapsys.pk}}, true, {{mapsys.system.pk}});" class="icon-refresh" title="Mark Scanned"></i>
     <br />
+    {% load humanize %}
+    <span class="sysLastVisit">Last Visited: {{system.last_visited|naturaltime}}</span>
+    <br />
+    <span class="sysFirstVisit">First Visited: {{system.first_visited|naturaltime}}</span>
+    <br />
     <br />
     <p class="occupiedText label label-important"><span class="occupiedTitle">Occupied:</span> <br /> {{system.occupied|safe}}</p>
     <p class="infoText label label-info"><span class="infoTitle">Info:</span> <br /> {{system.info|safe}} </p>
+    <p class="sysInfoUpdated label label-success">Info Updated: {{system.updated|naturaltime}}</p>
 </div>
     <div class="row sysDetailsFooter">
      <div id="systemStatsPanel" class="systemStatsPanel span2">
