--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -3,7 +3,7 @@
 <form id="sysAddForm" action="system/new" method="post">
     {% csrf_token %}
     <input type="hidden" class="sysAddInput" name="topMsID" value="{{topMs.pk}}">
-    System: &nbsp <input type="text" class="sysAddInput" name="bottomSystem" id="sysNameBox" /> <br />
+    System: &nbsp <input type="text" class="sysAddInput systemAuto" name="bottomSystem" id="sysNameBox" /> <br />
         Friendly Name (Max 8 Char.): &nbsp
         <input type="text" class="sysAddInput" name="friendlyName" value=""> <br />
 
@@ -18,13 +18,13 @@
         <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
         <br />
         <h5>Wormhole in: {{topMs.system.name}}</h5>
-        Type: &nbsp  <input type="text" class="sysAddInput" id="topTypeInput" name="topType" value="K162" onclick="this.value = '';" />
+        Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="topTypeInput" name="topType" value="K162" onclick="this.value = '';" />
        <br />
         Bubbled: &nbsp
         <input type="radio" class="sysAddInput" name="topBubbled" value="0" checked="checked">No 
         <input type="radio" class="sysAddInput" name="topBubbled" value="1">Yes
         <h5>Wormhole on Opposite Side:</h5>
-        Type: &nbsp  <input type="text" class="sysAddInput" id="bottomTypeInput" name="bottomType" value="K162" onclick="this.value = '';" />
+        Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="bottomTypeInput" name="bottomType" value="K162" onclick="this.value = '';" />
         <br />
         Bubbled: &nbsp
         <input type="radio" class="sysAddInput" name="bottomBubbled" value="0" checked="checked">No 
@@ -33,18 +33,6 @@
         <input id="sysAddSubmit" class="sysAddInput btn btn-primary" type="submit" value="Add System">
     </form>
         <script type="text/javascript">
-            $('#sysNameBox').autocomplete({
-                    source: "/search/system/",
-                    minLength: 2
-                    });
-            $('#topTypeInput').autocomplete({
-                    source: "/search/whtype/",
-                    minLength: 1
-                    });
-             $('#bottomTypeInput').autocomplete({
-                    source: "/search/whtype/",
-                    minLength: 1
-                    });
            $('#sysAddForm').submit(function(e){
                         e.preventDefault();
                         AddSystem();
