--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -1,12 +1,12 @@
 <div title="Add Starbase" id="addPOSDialog" class="addPOSDialog">
     <form id="addPOSForm" action="/pos/{{system.pk}}/add" method="POST">
         {% csrf_token %}
-        Full Corp Name: <input id="corpBox" name="corp" type="text" > <br />
+        Full Corp Name: <input id="corpBox" class="corpAuto" name="corp" type="text" > <br />
         <span class="label label-warning" id="digiterror">Please enter digits only for planet and moon. </span><br /><br />
         Planet: <input name="planet" class="input-mini" type="text"> 
         Moon: <input name="moon" class="input-mini" type="text"> <br />
         Tower Name: <input name="name" type="text"> <br />
-        Tower Type: <input id="towertype" name="tower" type="text"> <br />
+        Tower Type: <input id="towertype" class="typeAuto" name="tower" type="text"> <br />
         Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp Unanchored 
         <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp Anchored
         <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp Onlining
@@ -28,14 +28,6 @@
         var rads=document.getElementsByName(rad.name);
         document.getElementById('rftime').style.display=(rads[3].checked)?'block':'none';
     }
-    $('#corpBox').autocomplete({
-                source: "/search/corp",
-                minLength: 2
-                });
-    $('#towertype').autocomplete({
-                source: "/search/item",
-                minLength: 2
-                });
     $('#addPOSForm').submit(function(e){
                 e.preventDefault();
                 AddPOS({{system.pk}});
