--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -29,5 +29,7 @@
 <div id="sysInfoDiv" class="sysInfoDiv">
     <a name="sysInfo"></a>
 </div>
+<div id="modalHolder" class="modal hide">
+</div>
 {% endblock %}
 
