--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -1,43 +1,49 @@
 <div id="addSystemDialog">
-<h4>Add System Connected To: {{topMs.system.name}}</h4>
-<form id="sysAddForm" action="system/new" method="post">
-    {% csrf_token %}
-    <input type="hidden" class="sysAddInput" name="topMsID" value="{{topMs.pk}}">
-    System: &nbsp <input type="text" class="sysAddInput systemAuto" name="bottomSystem" id="sysNameBox" /> <br />
-        Friendly Name (Max 8 Char.): &nbsp
-        <input type="text" class="sysAddInput" name="friendlyName" value=""> <br />
+    <div class="modal-header">
+        <h4>Add System Connected To: {{topMs.system.name}}</h4>
+    </div>
+    <div class="modal-body">
+    <form id="sysAddForm" action="system/new" method="post">
+        {% csrf_token %}
+        <input type="hidden" class="sysAddInput" name="topMsID" value="{{topMs.pk}}">
+        System: &nbsp <input type="text" class="sysAddInput systemAuto" name="bottomSystem" id="sysNameBox" /> <br />
+            Friendly Name (Max 8 Char.): &nbsp
+            <input type="text" class="sysAddInput" name="friendlyName" value=""> <br />
 
-        <h5>Wormhole Status:</h5>
-        Time Status: &nbsp
-        <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Fine &nbsp
-        <input type="radio" class="sysAddInput" name="timeStatus" value="1">End of Life
-        <br />
-        Mass Status: &nbsp
-        <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Fine &nbsp
-        <input type="radio" class="sysAddInput" name="massStatus" value="1">First Shrink &nbsp
-        <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
-        <br />
-        <h5>Wormhole in: {{topMs.system.name}}</h5>
-        Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="topTypeInput" name="topType" value="K162" onclick="this.value = '';" />
-       <br />
-        Bubbled: &nbsp
-        <input type="radio" class="sysAddInput" name="topBubbled" value="0" checked="checked">No 
-        <input type="radio" class="sysAddInput" name="topBubbled" value="1">Yes
-        <h5>Wormhole on Opposite Side:</h5>
-        Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="bottomTypeInput" name="bottomType" value="K162" onclick="this.value = '';" />
-        <br />
-        Bubbled: &nbsp
-        <input type="radio" class="sysAddInput" name="bottomBubbled" value="0" checked="checked">No 
-        <input type="radio" class="sysAddInput" name="bottomBubbled" value="1">Yes
-        <br /><br />
-        <input id="sysAddSubmit" class="sysAddInput btn btn-primary" type="submit" value="Add System">
-    </form>
+            <h5>Wormhole Status:</h5>
+            Time Status: &nbsp
+            <input type="radio" class="sysAddInput" name="timeStatus" value="0" checked="checked">Fine &nbsp
+            <input type="radio" class="sysAddInput" name="timeStatus" value="1">End of Life
+            <br />
+            Mass Status: &nbsp
+            <input type="radio" class="sysAddInput" name="massStatus" value="0" checked="checked">Fine &nbsp
+            <input type="radio" class="sysAddInput" name="massStatus" value="1">First Shrink &nbsp
+            <input type="radio" class="sysAddInput" name="massStatus" value="2">Critical<br />
+            <br />
+            <h5>Wormhole in: {{topMs.system.name}}</h5>
+            Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="topTypeInput" name="topType" value="K162" onclick="this.value = '';" />
+           <br />
+            Bubbled: &nbsp
+            <input type="radio" class="sysAddInput" name="topBubbled" value="0" checked="checked">No 
+            <input type="radio" class="sysAddInput" name="topBubbled" value="1">Yes
+            <h5>Wormhole on Opposite Side:</h5>
+            Type: &nbsp  <input type="text" class="sysAddInput wormholeAuto" id="bottomTypeInput" name="bottomType" value="K162" onclick="this.value = '';" />
+            <br />
+            Bubbled: &nbsp
+            <input type="radio" class="sysAddInput" name="bottomBubbled" value="0" checked="checked">No 
+            <input type="radio" class="sysAddInput" name="bottomBubbled" value="1">Yes
+            <br /><br />
+        </form>
+    </div>
+    <div class="modal-footer">
+        <a href="#" id="sysCloseButton" class="btn" data-dismiss="modal">Close</a>
+            <a href="#" id="sysAddSubmit" class="btn btn-primary">Add System</a>
+    </div>
         <script type="text/javascript">
-           $('#sysAddForm').submit(function(e){
+           $('#sysAddSubmit').click(function(e){
                         e.preventDefault();
                         AddSystem();
-                        $('#addSystemDialog').dialog('close');
-                        $('#addSystemDialog').remove();
+                        $('#modalHolder').modal('hide');
                         return false;
             });
         </script>
