Change default theme to slate.

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/raphael-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/map_functions.js"></script>
     <link rel="stylesheet" href="{{STATIC_URL}}css/map.css" type="text/css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/map-slate.css" type="text/css" />
     <script type="text/javascript">var ajax_image = "<img src= '{{STATIC_URL}}images/loading.gif'></img>"; </script>
 {% endblock %}
 {% block contentheader %}
